# vaultrag

./: .env.example  .gitignore  README.md  _buggy_conftest.py  _buggy_generate.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py  config.py  conflicts.py  db.py  embeddings.py  evaluate.py  generate.py  ingest.py  main.py  retrieval.py  schema.sql
demo/: corpus.json  gold.json
tests/: conftest.py  test_acl.py  test_api.py  test_conflicts.py  test_evaluate.py  test_generate.py
