[project]
name = "vaultrag"
version = "0.1.0"
description = "Permission-aware RAG: access control enforced in the retrieval query, not after it."
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psycopg[binary,pool]>=3.2",
    "pydantic>=2.9",
]

[project.scripts]
vaultrag = "app.cli:main"

[project.optional-dependencies]
local = ["sentence-transformers>=3.0"]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "httpx>=0.27", "ruff>=0.7"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
