[project]
name = "vaultrag"
version = "0.1.0"
description = "Permission-aware RAG: access control enforced in the retrieval query, not after it."
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psycopg[binary,pool]>=3.2",
    "pydantic>=2.9",
]

# Without this, setuptools flat-layout autodiscovery sees app/ and demo/ as two top-level
# packages and refuses to build at all. It never fired locally because the venv was installed
# before demo/ existed, which is exactly the class of bug a clean-clone CI run exists to catch.
[tool.setuptools]
packages = ["app"]

[project.scripts]
vaultrag = "app.cli:main"

[project.optional-dependencies]
local = ["sentence-transformers>=3.0"]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "httpx>=0.27", "ruff>=0.7"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
